# squares

./: Cargo.toml  README.md
benches/: throughput.rs
src/: key.rs  lib.rs  rand.rs  squares.rs
